--- a/css/products.css
+++ b/css/products.css
@@ -1,6 +1,5 @@
 .products {
   width: 100%;
-  height: 100vh;
   overflow: hidden;
   position: relative;
 }
@@ -10,7 +9,7 @@
   left: 0;
   width: 100%;
   object-fit: scale-down;
-  background-image: url("../public/image/campo.jpg");
+  background-image: url("../public/image/cosecha.jpeg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -31,9 +30,8 @@
   max-width: 1440px;
   margin: 0 auto;
   padding: 40px 40px;
-  height: 70vh;
   display: flex;
-  color: #fff;
+  color: #4d4d4d;
   z-index: 1;
   position: relative;
   flex-direction: column;
@@ -46,4 +44,63 @@
 
 .products .products-content .title {
   margin: 0 auto;
+}
+
+.products .products-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.products .products-container .product {
+  background-color: rgba(255, 255, 255, 0.85);
+  width: 300px;
+  border-radius: 20px;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+.products .products-container .product .product-img {
+  padding: 0 1.5rem;  
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100%;
+}
+
+.products .products-container .product .product-img img {
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+}
+
+.product-content {
+  padding: 0 1rem 1rem 1rem;
+  text-align: center;
+  
+}
+
+.product-content h3 {
+  color: #5dbb63;
+} 
+.product-content h3 {
+  color: #4d4d4d;
+}
+
+.product-content button {
+  padding: 10px 50px;
+  margin: 2rem auto;
+  margin-bottom: 5px;
+  display: block;
+  background-color: #5dbb63;
+  border: 5px solid #5dbb63;
+  color: rgb(255, 255, 255);
+  min-width: 64px;
+  border-radius: 15px;
+  font-weight: 500;
+  font-size: 0.875rem;
+  box-shadow: none;
+  cursor: pointer;
 }
