--- a/css/hero.css
+++ b/css/hero.css
@@ -35,7 +35,7 @@
   position: relative;
   flex-direction: column;
 }
-.hero .hero-content .icon {
+.icon {
   background: url("../public/image/icon.png") no-repeat 50% 50%;
   background-size: 28px 28px;
   display: inline-block;
@@ -77,7 +77,7 @@
   justify-content: space-between;
   padding: 10px 0;
 }
-.hero .hero-content .logo span {
+.logo span {
   font-family: "Pacifico", cursive;
   color: #5dbb63;
   font-size: 1.8rem;
